# airdrop-demo

./: Cargo.toml  README.md
src/: contract.rs  contract_unit_tests.rs  lib.rs  service.rs  service_unit_tests.rs  signature_payload.rs  state.rs  test_utils.rs
tests/: payments.rs
web-frontend/: codegen.ts  package-lock.json  package.json
web-frontend/public/: index.html
web-frontend/src/: AccountProvider.tsx  App.tsx  GraphQLProvider.tsx  index.tsx  vite-env.d.ts
web-frontend/src/hooks/: store.tsx  useSyncProviders.tsx
web-frontend/src/qql/: gql.ts  graphql.ts
zk-airdrop-demo/: Cargo.toml
zk-airdrop-demo/src/: contract.rs  service.rs
