[package]
name = "airdrop-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.8.5", features = ["serde"] }
async-graphql = { version = "=7.0.2", default-features = false }
async-graphql-derive = { version = "=7.0.2", default-features = false }
indexmap = "2.6.0"
linera-sdk = "0.12.0"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
alloy-primitives = { version = "0.8.5", features = ["getrandom"] }
linera-sdk = { version = "0.12.0", features = ["test"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { version = "0.12.0", features = ["test", "wasmer"] }
tokio = "1.39.3"

[[bin]]
name = "airdrop_demo_contract"
path = "src/contract.rs"

[[bin]]
name = "airdrop_demo_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
